--- a/main.css
+++ b/main.css
@@ -1,4 +1,13 @@
 .body {
+}
+.container {
   width: 400px;
   height: 600px;
+  background-image: url("img/fondodeahtNote.png");
+}
+..container h1 {
+}
+.button-container {
+  display: flex;
+  flex-direction: column;
 }
