--- a/styles/components/poup/poup.css
+++ b/styles/components/poup/poup.css
@@ -12,6 +12,8 @@
   position: absolute;
   bottom: 5%;
   margin: 0 5% 0 5%;
+  border: 0px;
+
 }
 .container-popup {
   display: flex;
@@ -22,4 +24,13 @@
   width: 100px;
   height: 100px;
   background-color: crimson;
+}
+.poup li{
+  color: black;
+}
+.poup ul{
+  margin-top: 145px;
+  margin-right: 150px;
+  font-size: 25px;
+
 }
