--- a/styles/components/stylesDN/textodn.css
+++ b/styles/components/stylesDN/textodn.css
@@ -1,10 +1,14 @@
 .texto {
-  margin-left: 10%;
-  padding-top: 30%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 32%;
 }
 
 .causaMuerte {
   font-size: 2em;
+  width: 80%;
 }
 .nombre {
   font-size: 2em;
