--- a/styles/components/poup/poup.css
+++ b/styles/components/poup/poup.css
@@ -1,5 +1,6 @@
 .poup {
-  background-position: center;
+  margin-top: 220px;
+  background-position: top;
   background-repeat: no-repeat;
   background-image: url("../../../img/hojaRota.png");
   display: flex;
@@ -16,7 +17,7 @@
 
 }
 .container-popup {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
@@ -33,4 +34,12 @@
   margin-right: 150px;
   font-size: 25px;
 
+}
+.cruzcerrar{
+  display: flex;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  margin-top: 20px;
+  margin-left: 240px;
 }
