--- a/styles/components/pagina-principal/botones.css
+++ b/styles/components/pagina-principal/botones.css
@@ -11,4 +11,7 @@
     width: 30px;
     height: 30px;
     display: flex;
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 300px;
   }
